Spawn shell subprocess -- resolves #33 #8 #9

--- a/src/buildenv/templates/buildenv.cmd.jinja
+++ b/src/buildenv/templates/buildenv.cmd.jinja
@@ -1,5 +1,2 @@
 :: Wrap to buildenv script
-{{ windowsPython }} buildenv.py
-
-:: Load venv on success
-if %ERRORLEVEL% EQU 0 .buildenv\activate.cmd
+{{ windowsPython }} buildenv-loader.py
