--- a/src/buildenv/templates/shell.cmd.jinja
+++ b/src/buildenv/templates/shell.cmd.jinja
@@ -1,5 +1,5 @@
 :: Activate venv
-.buildenv\activate.cmd
+call .buildenv\activate.cmd
 
 :: Welcome message
-echo "Welcome to buildenv shell!"
+echo Welcome to buildenv shell!
