--- a/src/buildenv/templates/buildenv.sh.jinja
+++ b/src/buildenv/templates/buildenv.sh.jinja
@@ -1,2 +1,12 @@
 # Wrap to buildenv script
-if test -f /git-bash.exe; then {{ windowsPython }} buildenv-loader.py; else {{ linuxPython }} buildenv-loader.py; fi
+if test -f /git-bash.exe; then
+    _BUILDENV_PYTHON={{ windowsPython }}
+else
+    _BUILDENV_PYTHON={{ linuxPython }}
+fi
+${_BUILDENV_PYTHON} buildenv-loader.py "$@"
+
+# Spawn shell if required
+if test $? -eq {{ rcStartShell }}; then
+    $SHELL --rcfile .buildenv/shell.sh
+fi
