--- a/src/buildenv/templates/buildenv.sh.jinja
+++ b/src/buildenv/templates/buildenv.sh.jinja
@@ -1,6 +1,6 @@
 # Check if python is installed
 if test -f /git-bash.exe; then
-    _BUILDENV_PYTHON={{ windowsPython }}
+    _BUILDENV_PYTHON={{ shWindowsPython }}
 else
     _BUILDENV_PYTHON={{ linuxPython }}
 fi
