--- a/src/buildenv/templates/completion.sh.jinja
+++ b/src/buildenv/templates/completion.sh.jinja
@@ -4,8 +4,9 @@ if test -f /git-bash.exe; then
     export ARGCOMPLETE_USE_TEMPFILES=1
 fi
 
-# Enable completion for buildenv
-eval "$(register-python-argcomplete buildenv)"
+# Enable completion for registered buildenv commands
+{% for cmd in commands %}eval "$(register-python-argcomplete {{ cmd }})"
+{% endfor %}
 
 # Enable completion for pip
 if test -n "${ZSH_VERSION:-}"; then
