--- a/src/buildenv/templates/buildenv.cmd.jinja
+++ b/src/buildenv/templates/buildenv.cmd.jinja
@@ -1,4 +1,5 @@
 :: Check if python is installed
+setlocal
 {{ cmdWindowsPython }} --version > NUL 2> NUL
 set _BUILDENV_RC=%ERRORLEVEL%
 if %_BUILDENV_RC% NEQ 0 (
@@ -11,18 +12,23 @@ if %_BUILDENV_RC% NEQ 0 (
 set _BUILDENV_RC=%ERRORLEVEL%
 
 :: Check for specific RC
-if %_BUILDENV_RC% EQU {{ rcStartShell }} (
-    :: Spawn shell if required
-    cmd /k .buildenv\shell.cmd
-    set _BUILDENV_RC=%ERRORLEVEL%
-)
-if %_BUILDENV_RC% GTR {{ rcStartShell }} (
-    :: Execute command if required
-    set _BUILDENV_CMD=.buildenv\command.%_BUILDENV_RC%.cmd
-    cmd /c %_BUILDENV_CMD%
-    set _BUILDENV_RC=%ERRORLEVEL%
-    del %_BUILDENV_CMD%
-)
+if %_BUILDENV_RC% EQU {{ rcStartShell }} goto shell
+if %_BUILDENV_RC% GTR {{ rcStartShell }} goto run
+goto end
+
+:shell
+:: Spawn shell if required
+cmd /k .buildenv\shell.cmd
+set _BUILDENV_RC=%ERRORLEVEL%
+goto end
+
+:run
+:: Execute command if required
+set _BUILDENV_CMD=.buildenv\command.%_BUILDENV_RC%.cmd
+cmd /c %_BUILDENV_CMD%
+set _BUILDENV_RC=%ERRORLEVEL%
+del %_BUILDENV_CMD%
+goto end
 
 :end
 exit /b %_BUILDENV_RC%
