--- a/src/buildenv/templates/buildenv.sh.jinja
+++ b/src/buildenv/templates/buildenv.sh.jinja
@@ -20,11 +20,13 @@ if test ${_BUILDENV_RC} -eq {{ rcStartShell }}; then
     ${SHELL} --rcfile .buildenv/shell.sh
     _BUILDENV_RC=$?
 elif test ${_BUILDENV_RC} -gt {{ rcStartShell }}; then
-    # Execute command if required
+    # Execute command if required (and command script found)
     _BUILDENV_CMD=.buildenv/command.${_BUILDENV_RC}.sh
-    ${SHELL} -c ${_BUILDENV_CMD}
-    _BUILDENV_RC=$?
-    rm ${_BUILDENV_CMD}
+    if test -f ${_BUILDENV_CMD}; then
+        ${SHELL} -c ${_BUILDENV_CMD}
+        _BUILDENV_RC=$?
+        rm ${_BUILDENV_CMD}
+    fi
 fi
 
 # Forward RC
